# wonder-scraper

./: .dockerignore  .env.example  .gitignore  .gitmodules  .vercelignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  TASKS_BLOKPAX_UI.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  middleware.ts  monitor_scraper.sh  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway-staging.toml  railway-worker.toml  railway.json  railway.toml  start.sh  tasks.json  vercel.json  vercel.json.bak
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
api/: og.tsx  package.json  tsconfig.json
api/og/: [cardId].tsx
app/: db.py  main.py  schemas.py
app/api/: admin.py  analytics.py  auth.py  billing.py  blog.py  blokpax.py  cards.py  deps.py  market.py  meta.py  portfolio.py  price_alerts.py  users.py  watchlist.py  webhooks.py
app/core/: anti_scraping.py  circuit_breaker.py  config.py  context.py  db_utils.py  errors.py  health_check.py  health_thresholds.py  jwt.py  logging_config.py  metrics.py  metrics_persistent.py  perf_metrics.py  rate_limit.py  reference_cache.py  saas.py  scheduler.py  security.py  typing.py  worker_health.py
app/discord_bot/: bot.py  logger.py  stats.py  storage.py  webhook.py
app/middleware/: context.py  metering.py  timing.py
app/models/: __init__.py  analytics.py  api_key.py  blog_post.py  blokpax.py  card.py  circuit_breaker_state.py  market.py  meta_vote.py  observability.py  portfolio.py  price_alert.py  scrape_task.py  (+3 more)
browser-service/: Dockerfile  server.js
data/: ebay_sample.html  orderbook_backtest_v2.csv
docs/: DATA_QUALITY_AUDIT_2025-12-30.md  PRICE_TRACKING_ARCHITECTURE.md  SPRINT_RETROSPECTIVE_2025-12-31.md  STAGING_SETUP.md  configuration.md  prd-moonpay-buy-now.md
frontend/: .env.staging  .gitignore  app.config.timestamp_1763683960309.js  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsr.config.json  vercel.json  vite.config.timestamp_1763686859535.js  vite.config.ts
migrations/: 001_add_vwap_and_condition_fields.sql
models/: ar_pricing_features.json  ar_pricing_features.txt  ar_pricing_model.joblib  ar_pricing_model_v2.joblib
notebooks/: autoregressive_pricing_model.ipynb  bid_ask_order_book.ipynb  floor_price_analysis.ipynb  order_book_algorithm.ipynb  orderbook_accuracy_analysis.ipynb
product-mgmt/: 00_GOALS_AND_CONTEXT.md  01_PHASE_PLAN.md  02_DELIVERY_AND_RISKS.md
scripts/: add_discord_id.py  add_listing_format.py  add_onboarding_column.py  add_performance_indexes.py  add_product_subtype.py  add_subscription_product_type.py  analyze_order_book.py  backfill_blokpax_treatment.py  backfill_bulk_lot_flags.py  backfill_card_images.py  backfill_fmp_snapshots.py  backfill_listing_format.py  backfill_listing_format_refetch.py  backfill_nft_traits.py  backfill_opensea_treatment.py  backfill_product_subtype.py  backfill_seller_data.py  backfill_treatments.py  backtest_orderbook.py  bulk_scrape.py  check_db_counts.py  check_title.py  ci-local.sh  cleanup_bad_entries.py  cleanup_card_1.py  cleanup_contamination.py  cleanup_listing_data.py  cleanup_mismatches.py  cleanup_sealed_duplicates.py  consolidate_treatments.py  create_admin.py  create_webhook_event_table.py  data_quality_scan.py  datamine_cardeio.py  debug_opensea_volume.py  debug_pydoll.py  deploy-frontend.sh  discover_market_patterns.py  distributed_backfill.py  enrich_cards_from_cardeio.py  (+76 more)
tasks/: EPIC-001-order-book-floor-estimation.md  EPIC-002-QUICKSTART.md  EPIC-002-SUMMARY.md  EPIC-002-data-quality-improvements.md  TASK-001-jupyter-prototype.md  TASK-003-order-book-analyzer-service.md  TASK-004-floor-price-service.md  TASK-007-order-book-depth-chart.md  TASK-008-data-quality-audit.md  TASK-009-seller-data-backfill.md  TASK-010-bulk-lot-detection.md  TASK-011-seller-data-ui.md  TASK-012-order-book-ui-integration.md
tests/: __init__.py  conftest.py  test_anti_scraping.py  test_api_admin.py  test_api_cards.py  test_api_market.py  test_api_schema_validation.py  test_auth.py  test_auth_config.py  test_auth_e2e.py  test_billing.py  test_billing_e2e.py  test_blokpax_scraper.py  test_bulk_lot_detection.py  test_circuit_breaker.py  test_data_quality.py  test_db_utils.py  test_discord.py  test_email.py  test_floor_price.py  test_jwt.py  test_listing_extraction.py  test_listing_tracking.py  test_market_patterns.py  test_metering.py  test_metrics.py  test_observability.py  test_opensea.py  test_order_book.py  test_parse_date.py  test_polar.py  test_portfolio_api.py  test_portfolio_models.py  test_pricing.py  test_rate_limit.py  test_scheduler.py  test_scraper.py  test_security.py  test_seller_extraction.py  test_task_queue.py
(+223 files in other folders)
