[tool.poetry]
name = "wonder-scraper"
version = "0.1.0"
description = "eBay scraper for TCG Wonders of the First"
authors = ["Cody <cody@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.27"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
pdfplumber = "^0.11.8"
pydoll-python = {git = "https://github.com/autoscrape-labs/pydoll.git"}
beautifulsoup4 = "^4.14.2"
lxml = "^6.0.2"
python-dateutil = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
pyjwt = "^2.10.1"
requests = "^2.32.5"
python-multipart = "^0.0.20"
httpx = "^0.28.1"
pydantic-settings = "^2.12.0"
argon2-cffi = "^25.1.0"
apscheduler = "^3.11.1"
openai = "^1.0.0"
playwright = "^1.56.0"
aiohttp = "^3.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
