[tool.poetry]
name = "wonder-scraper"
version = "0.1.0"
description = "eBay scraper for TCG Wonders of the First"
authors = ["Cody <cody@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.27"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
pdfplumber = "^0.11.8"
pydoll-python = {git = "https://github.com/autoscrape-labs/pydoll.git"}
beautifulsoup4 = "^4.14.2"
lxml = "^6.0.2"
python-dateutil = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
pyjwt = "^2.10.1"
requests = "^2.32.5"
python-multipart = "^0.0.20"
httpx = "^0.28.1"
pydantic-settings = "^2.12.0"
argon2-cffi = "^25.1.0"
apscheduler = "^3.11.1"
openai = "^1.0.0"
playwright = "^1.56.0"
aiohttp = "^3.13.2"
cachetools = "^5.5.0"
resend = "^2.0.0"
pyyaml = "^6.0.3"
user-agents = "^2.2.0"
polar-sdk = "^0.28.0"
alembic = "^1.17.2"
discord-py = ">=2.0"
numpy = "^2.4.0"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
argon2-cffi = "^25.1.0"
ruff = "^0.8.0"
ty = "^0.0.4"
jupyter = "^1.1.1"
jupyterlab = "^4.5.1"
ipykernel = "^7.1.0"
pandas = "^2.3.3"
scikit-learn = "^1.8.0"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require PostgreSQL database)",
    "saas: marks tests as SaaS-only (require saas/ module)",
]
asyncio_mode = "strict"
testpaths = ["tests", "saas/tests"]
# SaaS tests are skipped if saas/ module not available (see conftest.py)

[tool.ty.rules]
# ty type checker configuration (Astral's fast Python type checker)
# Suppress deprecated warning for session.execute() - it's correct for raw SQL with text()
deprecated = "ignore"
# Suppress possibly-missing-attribute for third-party libs (Discord, OpenAI) with union types
possibly-missing-attribute = "ignore"
# Suppress unresolved-import for optional saas module (uses try/except pattern)
unresolved-import = "ignore"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Ignore certain rules in specific files (legacy code patterns)
per-file-ignores = { "app/api/admin.py" = ["E722"], "app/api/analytics.py" = ["E722"], "app/api/market.py" = ["E402"], "app/core/scheduler.py" = ["E711", "E712", "E722"], "app/discord_bot/bot.py" = ["E402"], "app/discord_bot/stats.py" = ["E741"], "app/discord_bot/webhook.py" = ["E402"], "app/scraper/opensea.py" = ["E701"], "app/services/market_insights.py" = ["E741"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
